--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,10 +14,19 @@ spring.mvc.static-path-pattern=/static/**
 spring.http.multipart.maxFileSize=1024MB
 spring.http.multipart.maxRequestSize=1024MB
 
-# sqlite url
-spring.datasource.url=jdbc:sqlite:nameserver-cheater.sqlite
+spring.datasource.url=jdbc:mysql://localhost:3306/dns-cheater?characterEncoding=utf8&useSSL=true
+spring.datasource.username=test
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.max-idle=10
+spring.datasource.max-wait=10000
+spring.datasource.min-idle=5
+spring.datasource.initial-size=5
 
-log4j.rootLogger = debug,ServerDailyRollingFile,stdout
+mybatis.type-aliases-package=cn.org.hentai.dns.entity
+mybatis.mapper-locations=classpath:mapper/*.xml
+
+log4j.rootLogger = STRACE,ServerDailyRollingFile,stdout
 
 log4j.appender.ServerDailyRollingFile = org.apache.log4j.DailyRollingFileAppender
 log4j.appender.ServerDailyRollingFile.DatePattern = '.'yyyy-MM-dd
@@ -29,4 +38,4 @@ log4j.appender.ServerDailyRollingFile.Append = true
 log4j.appender.stdout = org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern = %d yyyy-MM-dd HH:mm:ss %p [%c] %m%n
-log4j.cn.org.hentai = debug
+log4j.cn.org.hentai = STRACE
