向上游服务器查询

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 
-server.remotePort=80
+server.port=80
+dns.server.port = 53
+dns.server.name = dns.hentai.org.cn
 
-dns.remotePort = 53
-dns.upstream.server = 180.76.76.76
+dns.upstream.server.address = 180.76.76.76
+dns.upstream.server.port = 53
 
 # 设定ftl文件路径
 spring.freemarker.template-loader-path=classpath:/templates
