准备统计查询数据

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,12 @@ dns.server.name = dns.hentai.org.cn
 dns.upstream.server.address = 180.76.76.76
 dns.upstream.server.port = 53
 
+# 启用查询统计分析
+dns.stat-logger = on
+# 缓存查询日志所使用的缓存容器初始大小，每个查询记录占用12字节，1G内存可保存89,478,485个查询记录
+dns.stat-logger.memory = 200m
+
+
 # 设定ftl文件路径
 spring.freemarker.template-loader-path=classpath:/templates
 
