--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,13 @@
 
+# WEB管理控制台端口
 server.port=80
+
+# DNS服务监听端口，必须是53，否则常规应用不支持
 dns.server.port = 53
+# DNS服务器名称，当使用PTR模式查询本DNS服务器时响应
 dns.server.name = dns.hentai.org.cn
 
+# 上游服务器IP及端口
 dns.upstream.server.address = 180.76.76.76
 dns.upstream.server.port = 53
 
@@ -10,7 +15,6 @@ dns.upstream.server.port = 53
 dns.stat-logger = on
 # 缓存查询日志所使用的缓存容器初始大小，每个查询记录占用12字节，1G内存可保存89,478,485个查询记录
 dns.stat-logger.memory = 200m
-
 
 # 设定ftl文件路径
 spring.freemarker.template-loader-path=classpath:/templates
