--- a/pom.xml
+++ b/pom.xml
@@ -117,7 +117,7 @@
                                 </transformer>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <manifestEntries>
-                                        <Main-Class>cn.org.hentai.server.app.ServerApp</Main-Class>
+                                        <Main-Class>cn.org.hentai.dns.app.DNSCheaterApp</Main-Class>
                                     </manifestEntries>
                                 </transformer>
                             </transformers>
